# stackl-rs

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTORS  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md  build.rs
doc/: stackl-vol1.adoc  stackl-vol1.tex  stackl-vol2.adoc  stackl-vol2.tex  stackl-vol2.typ  stackl-vol3.adoc  stackl-vol3.tex
examples/: test.asm  test2.asm  test3.asm  test4.asm  test5.asm  user.asm
res/include/: float.h  iso646.h  limits.h  slintrin.h  stdarg.h  stdbool.h  stddef.h  stdint.h
src/: grammar.lalrpop
src/lib/: ast.rs  code_gen.rs  dr.rs  gen.rs  lex.rs  mod.rs  op.rs  sr.rs  sym.rs  tok.rs
src/lib/asm/: ast.rs  mod.rs  op.rs
src/lib/lnk/: mod.rs
src/lib/ssa/: build.rs  builder.rs  data.rs  mod.rs
stackl/: Cargo.toml
stacklc/: Cargo.toml
stacklc/src/: cli.rs  main.rs
stacklc/src/lex/: elements.rs  error.rs  lexer.rs  mod.rs  preproc.rs
stacklc/tests/: macro_expansion_tests.c  test01.c  test02.txt
tests/: mod.rs  test01.c  test01.h
tests/src/: arrays.c  bitfield.c  casts.c  enums.c  example_header.h  expr.c  if_stmt.c  macro_expansion_tests.c  preproc_tests.c  redef.c  structs.c  syntax.c  test1.c  test16.c  test26.c  test28.c  test29.c  test3.c  test30.c  test31.c  test32.c  test39.c  test41.c  test42.c  test43.c  test44.c  test45.c  test47.c  test49.c  test54.c  test9.c  translation_limits.c  variadic.c  void_decl.c
