[package]
name = "stackl"
version = "0.0.0"
edition = "2021"
authors = ["Jonathan Thomason"]
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true

[build-dependencies]
lalrpop = "^0.22"

[dependencies]
logos = "^0.15"
lalrpop-util = "^0.22"
clap = { version = "^4.5", features = ["derive", "cargo"] }
bimap = "^0.6"
bitflags = "^2.9"
chrono = "^0.4"

[lib]
name = "stackl"
path = "src/lib/mod.rs"

[[bin]]
name="stackl-vm"
path="src/bin/stackl-vm/main.rs"

[[bin]]
name="stackl-as"
path="src/bin/stackl-as/main.rs"

[[bin]]
name="stackl-ln"
path="src/bin/stackl-ln/main.rs"

[[bin]]
name="stackl-im"
path="src/bin/stackl-im/main.rs"

[[bin]]
name="stackl-cc"
path="src/bin/stackl-cc/main.rs"
