[package]
name = "stackl"
version = "0.0.0"
edition = "2021"
authors = ["Jonathan Thomason"]
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
logos = "0.15.0"
lalrpop-util = "0.22.0"
clap = { version = "4.5.17", features = ["derive"] }
bitflags = "2.6.0"

[lib]
name = "stackl"
path = "src/lib/mod.rs"

[[bin]]
name="stackl"
path="src/bin/stackl/main.rs"

[[bin]]
name="stackl-as"
path="src/bin/stackl-as/main.rs"

[[bin]]
name="stackl-ln"
path="src/bin/stackl-ln/main.rs"

[[bin]]
name="stackl-img"
path="src/bin/stackl-img/main.rs"
