[package]
name = "stacklc"
version = "0.0.0"
edition = "2021"
authors = ["Jonathan Thomason"]
license = "MIT OR Apache-2.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true

[dependencies]
stackl = {version = "0.0.0", path = "../stackl"}
clap = { version = "4.5.17", features = ["cargo"] }
bitflags = "2.6.0"
bimap = "0.6.3"
